<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~ /*
  ~  * Copyright (C) 2006 The Android Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:elevation="16dp">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/adNoAccounts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_account_circle_24dp"
                            android:text="@string/no_accounts_found"
                            android:textAlignment="center"
                            android:textColor="@color/lock_color"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/adRc"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:scrollbarStyle="outsideOverlay"
                            android:scrollbars="vertical"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/abBtnSearch" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/abBtnSearch"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="10dp"
                            android:text="@string/search_hint"
                            android:textColor="@color/blue_grey"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/abNameLayout"
                            app:strokeColor="@color/blue_grey" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/abBtnAdd"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/add"
                            android:textColor="@color/blue_grey"
                            android:visibility="gone"
                            app:layout_constraintEnd_toStartOf="@+id/abBtnSearch"
                            app:layout_constraintTop_toBottomOf="@+id/abNameLayout"
                            app:strokeColor="@color/blue_grey" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/abNameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:hint="@string/name_email"
                            android:textColorHint="@color/blue_grey"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/abName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionSearch"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingBottom="5dp"
                                android:textColor="@color/blue_grey"
                                android:textColorHint="@color/blue_grey" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <include
                        android:id="@+id/toolbar"
                        layout="@layout/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize" />


                </LinearLayout>

                <com.frestoinc.maildemo.view.ContentLoadingFrameLayout
                    android:id="@+id/loadingContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:textLoading="Authenticating..." />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </androidx.drawerlayout.widget.DrawerLayout>
    </FrameLayout>

    <data>

        <variable
            name="adViewModel"
            type="com.frestoinc.maildemo.ui.contact.AddressBookViewModel" />
    </data>
</layout>