<?xml version="1.0" encoding="utf-8"?>

<!--
  ~
  ~ /*
  ~  * Copyright (C) 2006 The Android Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/bcReciptR1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/bcReciptR1Image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_reply_all_grey_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bcReciptR1Subject"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/replyall"
                    android:maxLines="1"
                    android:textColor="@color/blue_grey"
                    android:textColorHint="@color/blue_grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/bcReciptR1Name"
                    app:layout_constraintStart_toEndOf="@+id/bcReciptR1Image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bcReciptR1Name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/blue_grey"
                    android:textColorHint="@color/blue_grey"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bcReciptR1Image"
                    app:layout_constraintTop_toBottomOf="@+id/bcReciptR1Subject" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bcReciptR2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bcReciptR1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/bcReciptR2Image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_reply_grey_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bcReciptR2Subject"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/reply"
                    android:maxLines="1"
                    android:textColor="@color/blue_grey"
                    android:textColorHint="@color/blue_grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/bcReciptR2Name"
                    app:layout_constraintStart_toEndOf="@+id/bcReciptR2Image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bcReciptR2Name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:textColor="@color/blue_grey"
                    android:textColorHint="@color/blue_grey"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bcReciptR2Image"
                    app:layout_constraintTop_toBottomOf="@+id/bcReciptR2Subject" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bcReciptR3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bcReciptR2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/bcReciptR3Image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_forward_grey_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bcReciptR3Subject"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/forward"
                    android:maxLines="1"
                    android:textColor="@color/blue_grey"
                    android:textColorHint="@color/blue_grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bcReciptR3Image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <View
            android:id="@+id/bcView1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/blue_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bcReciptR3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>